added login pages (1.0)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - lib/images/firstinfo.png
+    - assets/images/firstinfo.png
+    - assets/images/login_background.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
