--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,4 @@
-sdk.dir=C:\\Users\\nolen\\AppData\\Local\\Android\\Sdk
+sdk.dir=C:\\Users\\agiri\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
