--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  liquid_swipe: ^3.0.0
+  swipe: ^0.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/firstinfo.png
+    - assets/images/secondinfo.png
+    - assets/images/thirdinfo.png
     - assets/images/login_background.png
 
   # The following line ensures that the Material Icons font is
