--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   liquid_swipe: ^3.0.0
   swipe: ^0.0.1
+  universal_html: ^2.2.1
 
 dev_dependencies:
   flutter_test:
