--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/images/thirdinfo.png
     - assets/images/login_background.png
     - assets/images/logo.png
+    - assets/images/car.png
+    - assets/images/successful.png 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
