--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,7 +78,15 @@ flutter:
     - assets/images/login_background.png
     - assets/images/logo.png
     - assets/images/car.png
-    - assets/images/successful.png 
+    - assets/images/successful.png
+    - assets/images/login_image.png
+    - assets/images/road_safety.png 
+    - assets/images/traffic_signs.png 
+    - assets/images/water_damage.png 
+    - assets/images/road_damage.png
+    - assets/images/camera.png 
+    - assets/images/picture.png 
+    - assets/images/accident.png 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
