--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
 <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
    <application
+        android:requestLegacyExternalStorage="true"
         android:label="fabb_mobil"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
