--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   flutter_switch: ^0.3.2
   geolocator: ^9.0.2
   like_button: ^2.0.5
+  geocoding: ^2.1.0
+  geocode: ^1.0.2
+  image_picker: ^0.8.7+5
 
 dev_dependencies:
   flutter_test:
