settings and contact pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - assets/images/picture.png 
     - assets/images/accident.png 
     - assets/icons/not_found.png
+    - assets/images/contact.png
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
