--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   geocoding: ^2.1.0
   geocode: ^1.0.2
   image_picker: ^0.8.7+5
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
